--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,60 @@
 *{margin:0; padding:0;}
+#container{
+  width:100vw;
+  height:100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: antiquewhite; */
+}
+#root{
+  width:429px;
+  height:926px;
+  background-color: beige;
+  display: flex;
+  flex-direction: column;
+}
+
+#root div {
+  border:1px solid palevioletred;
+}
+
+
+#root>div{
+  flex-grow: 1;
+}
+#root>div:nth-child(1){
+  display: flex;
+}
+#root>div:nth-child(1)>div:nth-child(1){
+  height:100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /*  부모 태그의 크기를 %으로 지정해줬는데 flex가 안들어감
+  어디서 잘못됐을까 
+  display: flex; 가 있으면 크기가 display에 영향을 준다
+  까먹지 말것!!!!!*/
+  width:50%;
+
+}
+#root>div:nth-child(1)>div:nth-child(1)>div{
+  height:90%;
+  width:70%;
+  background-color: #c8c8c8;
+}
+#root>div:nth-child(1)>div:nth-child(2){
+  height:100%;
+  width:50%;
+}
+#root>div:nth-child(1)>div:nth-child(2){
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+#root>div:nth-child(1)>div:nth-child(2)>div{
+  width:100%;
+  height: 20%;
+}
