--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,31 @@
   width:100%;
   height: 20%;
 }
+
+#root>div:nth-child(2)>div:nth-child(1){
+  width:100%;
+  height:70%;
+}
+#root>div:nth-child(2)>div:nth-child(2){
+  width:100%;
+  height:20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#root>div:nth-child(2)>div:nth-child(2)>div{
+  width:20px;
+  height:20px;
+  border-radius: 10px;
+  margin: 10px;
+}
+#root>div:nth-child(3){
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#root>div:nth-child(3)>div{
+  width:80%;
+  height:60%;
+
+}
